--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,94 +1,47 @@
 steps:
-  - command: exit -1
-    soft_fail: true
-    key: 'step1'
-  - wait: ~
-  - command: |
-      if [ $(buildkite-agent step get "outcome" --step "step1") == "soft_failed" ]; then
-         cat <<- YAML | buildkite-agent pipeline upload
-         steps:
-           - label: "Notify slack about soft failed step"
-             command: echo "Notifying slack about the soft_failed step"
-             notify:
-               - slack:
-                   channels:
-                     - "#dahtey-test-channel"
-                   message: "Step1 has soft failed."
-      YAML
-      fi
-
-  - key: "dd-measures-01"
-    label: "Set First Metric"
-    command: "buildkite-agent meta-data set \"dd_measures.first_metric\" 1"
-
-  - key: "dd_key_test_01"
-    label: "Set Key Tag"
-    command: "buildkite-agent meta-data set \"dd_tags.key\" dd_key_test_01"
-
-  - trigger: pipeline-2
-    key: trigger-pipeline-2
-    label: ":rocket: Deploy event trigger"
-    branches: main
-    depends_on: dd_key_test_01
-
-  - label: Detect changed projects
-    key: diff
-    soft_fail: true
-    plugins:
-      - 'monorepo-diff#v1.5.0':
-          diff: .buildkite/scripts/git-diff-files.sh
-          watch:
-            - path: service-app
-              config:
-                trigger: monorepo-service-app-example
-            - path: test
-              config:
-                trigger: monorepo-test-example
-
-  - command: echo "Running unit tests"
-    label: "Run Unit Tests"
-    key: unit-tests
-
-  - command: echo "--> Start of concurrency gate"
-    label: "Start of Concurrency Gate"
-    concurrency_group: gate
-    concurrency: 1
-    key: start-gate
-    depends_on: unit-tests
-  
-  - wait
-  
-  - command: echo "Running deployment to staging environment"
-    label: "Deploy to Staging"
-    key: stage-deploy
-    depends_on: start-gate
-  
-  - command: echo "Running e2e tests after the deployment"
-    label: "Run E2E Tests"
-    parallelism: 3
-    depends_on:
-      - stage-deploy
-    key: e2e
-  
-  - wait
-  
-  - command: echo "End of concurrency gate <--"
-    label: "End of Concurrency Gate"
-    concurrency_group: gate
-    concurrency: 1
-    key: end-gate
-  
-  - command: echo "This and subsequent steps run independently"
-    label: "Run Subsequent Steps Independently"
-    depends_on: end-gate
-
-  - key: "dd-measures-02"
-    label: "Set Last Metric"
-    command: "buildkite-agent meta-data set \"dd_measures.last_metric\" 2"
-
-notify:
-  - slack: 
-      channels: 
-        - "#dahtey-test-channel"
-      message: "Whole build finished message"
-    if: build.branch == "main"
+- build:
+    env:
+      REPO_TAG: tidy-api
+      REVISION: 9775
+      DEPLOY_ENVIRONMENT: testing
+    branch: main
+    message: Deploy tidy-api (9775) to testing
+  label: Deploy to testing
+  trigger: hands-deployment
+  branches: feature/*
+- build:
+    env:
+      REPO_TAG: tidy-api
+      REVISION: 9775
+      DEPLOY_ENVIRONMENT: staging
+    branch: main
+    message: Deploy tidy-api (9775) to staging
+  label: Deploy to staging
+  trigger: hands-deployment
+  branches: main release/* hotfix/*
+- block: ":rocket: Release"
+  branches: main
+- build:
+    env:
+      REPO_TAG: tidy-api
+      REVISION: 9775
+      DEPLOY_ENVIRONMENT: production
+    branch: main
+    message: Deploy tidy-api (9775) to production
+  label: Deploy to production
+  trigger: hands-deployment
+  branches: main
+- build:
+    env:
+      REPO_TAG: tidy-api
+      REVISION: 9775
+      DEPLOY_ENVIRONMENT: sandbox
+    branch: main
+    message: Deploy tidy-api (9775) to sandbox
+  label: Deploy to sandbox
+  trigger: hands-deployment
+  branches: main
+- label: S3 copy package to latest
+  command: aws s3 cp --region ap-southeast-2 s3://loke-packages/tidy-api/9775.tar.gz
+    s3://loke-packages/tidy-api/latest.tar.gz
+  branches: main
