--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,19 +1,17 @@
 steps:
-  - build:
-      env:
-        REPO_TAG: tidy-api
-        REVISION: 9775
-        DEPLOY_ENVIRONMENT: testing
-      message: Deploy tidy-api (9775) to testing
+  - env:
+      REPO_TAG: tidy-api
+      REVISION: 9775
+      DEPLOY_ENVIRONMENT: testing
+    message: Deploy tidy-api (9775) to testing
     label: Deploy to testing
     trigger: pipeline-1
     branches: main feature/*
-  - build:
-      env:
-        REPO_TAG: tidy-api
-        REVISION: 9775
-        DEPLOY_ENVIRONMENT: staging
-      message: Deploy tidy-api (9775) to staging
+  - env:
+      REPO_TAG: tidy-api
+      REVISION: 9775
+      DEPLOY_ENVIRONMENT: staging
+    message: Deploy tidy-api (9775) to staging
     label: Deploy to staging
     trigger: pipeline-1
     branches: main release/* hotfix/*
