--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,5 +1,6 @@
 steps:
-  - env:
+  - key: deploy-to-testing
+    env:
       REPO_TAG: tidy-api
       REVISION: 9775
       DEPLOY_ENVIRONMENT: testing
@@ -7,7 +8,8 @@ steps:
     label: Deploy to testing
     trigger: pipeline-1
     branches: main feature/*
-  - env:
+  - key: deploy-to-staging
+    env:
       REPO_TAG: tidy-api
       REVISION: 9775
       DEPLOY_ENVIRONMENT: staging
