--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,7 +6,7 @@ steps:
         DEPLOY_ENVIRONMENT: testing
       message: Deploy tidy-api (9775) to testing
     label: Deploy to testing
-    # trigger: pipeline-1
+    trigger: pipeline-1
     branches: main feature/*
   - build:
       env:
@@ -15,7 +15,7 @@ steps:
         DEPLOY_ENVIRONMENT: staging
       message: Deploy tidy-api (9775) to staging
     label: Deploy to staging
-    # trigger: pipeline-1
+    trigger: pipeline-1
     branches: main release/* hotfix/*
   - block: ":rocket: Release"
     branches: main
