Test metadata passing to pipelines

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,6 +2,7 @@ steps:
   - label: "Store result"
     command: |
       result=$(pwd)
+      echo "Working directory: $result"
       buildkite-agent meta-data set "deployment-result" "$result"
   
   - trigger: pipeline-2
