--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,7 @@
 steps:
   - label: "Store result"
     command: |
-      result=$(pwd)
+      result=$(echo "$(pwd)")
       echo "Working directory: $result"
       buildkite-agent meta-data set "deployment-result" "$result"
   
