Test metadata passing to pipelines

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,9 +1,7 @@
 steps:
   - label: "Store result"
     command: |
-      result=$(ls)
-      echo "Result: $result"
-      buildkite-agent meta-data set "deployment-result" "$result"
+      buildkite-agent meta-data set "deployment-result" "SOURCE METADATA"
   
   - trigger: pipeline-2
     build:
