--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,11 +1,12 @@
 steps:
-  - label: "Store result"
-    command: |
-      buildkite-agent meta-data set "deployment-result" "SOURCE METADATA"
-    
-  - trigger: pipeline-2
-    build:
-      env:
-        PREVIOUS_BUILD_NUMBER: "${BUILDKITE_BUILD_NUMBER}"
-      meta_data:
-        SOURCE_BUILD_ID: "${BUILDKITE_BUILD_ID}"
+  - label: annotate 
+    plugins:
+      - bugcrowd/test-summary#v1.8.0:
+        inputs:
+          - label: rspec
+            artifact_path: artifacts/rspec*
+            type: junit
+        formatter:
+          type: details
+        context: test-summary
+
