Test allowed teams for blocked steps

--- a/.buildkite/blocked-notif-pipeline.yml
+++ b/.buildkite/blocked-notif-pipeline.yml
@@ -19,6 +19,8 @@ steps:
     branches: main release/* hotfix/*
   - block: ":rocket: Release"
     branches: main
+    allowed_teams:
+      - "Testers"
   - build:
       env:
         REPO_TAG: tidy-api
