Test allowed teams for blocked steps

--- a/.buildkite/blocked-notif-pipeline.yml
+++ b/.buildkite/blocked-notif-pipeline.yml
@@ -20,7 +20,7 @@ steps:
   - block: ":rocket: Release"
     branches: main
     allowed_teams:
-      - "Testers"
+      - "testers"
   - build:
       env:
         REPO_TAG: tidy-api
