--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -14,6 +14,11 @@ steps:
                    channels:
                      - "#dahtey-test-channel"
                    message: "Step1 has soft failed."
+           - block: "Lint failed"
+             branches: main
+             allowed_teams:
+               - "testers"
+               - "everyone" 
       YAML
       fi
 
