--- a/.buildkite/github-commit-status-pipeline.yml
+++ b/.buildkite/github-commit-status-pipeline.yml
@@ -4,4 +4,4 @@ steps:
   notify:
     - github_commit_status:
         context: "custom-failed-status"
-      if: step.finished
+      if: step.failed
