--- a/.buildkite/github-commit-status-pipeline.yml
+++ b/.buildkite/github-commit-status-pipeline.yml
@@ -1,7 +1,13 @@
 steps:
-- label: "Example Script"
-  command: "script.sh"
-  notify:
-    - github_commit_status:
-        context: "custom-failed-status"
-      if: step.failed
+  - label: "Run script and conditionally upload status notifier"
+    command: |
+      if ! ./script.sh; then
+        cat <<YAML | buildkite-agent pipeline upload
+        steps:
+          - wait
+          - label: "Notify GitHub of failure"
+            notify:
+              - github_commit_status:
+                  context: "my-custom-status"
+        YAML
+      fi
