test terminal session

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -104,6 +104,12 @@ steps:
     command: "buildkite-agent meta-data set \"dd_measures.last_metric\" 2"
     depends_on: subsequent-steps
 
+  - label: "Extend Terminal Session"
+    command: |
+      echo "Starting job..."
+      sleep 600  # Sleep for 10 minutes
+      echo "Job complete."
+
 notify:
   - slack: 
       channels: 
