--- a/.buildkite/assume-role-pipeline.yml
+++ b/.buildkite/assume-role-pipeline.yml
@@ -1,13 +1,13 @@
 steps:
-  - command: |
-      aws sts get-caller-identity
-      echo "Token file: $AWS_WEB_IDENTITY_TOKEN_FILE"
-      cat "$AWS_WEB_IDENTITY_TOKEN_FILE" | cut -d '.' -f2 | base64 -d | jq .
-    key: "step1"
-    label: "Get Caller Identity"
-    plugins:
-      - aws-assume-role-with-web-identity#v1.4.0:
-          role-arn: arn:aws:iam::097340723131:role/buildkite-dahtey-Role
+  # - command: |
+  #     aws sts get-caller-identity
+  #     echo "Token file: $AWS_WEB_IDENTITY_TOKEN_FILE"
+  #     cat "$AWS_WEB_IDENTITY_TOKEN_FILE" | cut -d '.' -f2 | base64 -d | jq .
+  #   key: "step1"
+  #   label: "Get Caller Identity"
+  #   plugins:
+  #     - aws-assume-role-with-web-identity#v1.4.0:
+  #         role-arn: arn:aws:iam::097340723131:role/buildkite-dahtey-Role
   - label: "Upload to ap-southeast-2 bucket"
     command:
       - echo "hello world" > test1.txt
