--- a/.buildkite/assume-role-pipeline.yml
+++ b/.buildkite/assume-role-pipeline.yml
@@ -10,6 +10,7 @@ steps:
   #         role-arn: arn:aws:iam::097340723131:role/buildkite-dahtey-Role
   - label: "Upload to ap-southeast-2 bucket"
     command:
+      - env
       - echo "hello world" > test1.txt
       - buildkite-agent artifact upload test1.txt
     env:
