--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,12 +1,12 @@
 steps:
   - label: "Test - Should SKIP if amp present"
     key: "test_conditional"
-    if: ! build.pull_request.labels includes "amp"
+    if: "!build.pull_request.labels includes \"amp\""
     command: echo "This should NOT run if amp label is present"
 
   - label: "Test - Should RUN if amp present"  
     key: "test_conditional_opposite"
-    if: build.pull_request.labels includes "amp"
+    if: "build.pull_request.labels includes \"amp\""
     command: echo "This SHOULD run if amp label is present."
   # - label: "Extend Terminal Session"
   #   command: |
