--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -6,6 +6,12 @@ retry_policy: &retry_policy
       limit: 2
 
 steps:
+  - label: "Example"
+    command: |
+      echo "--- Group 1"
+      sleep 2
+      echo "--- Group 2"
+      sleep 1
   # - label: "Test - Should SKIP if amp present"
   #   key: "test_conditional"
   #   if: "!build.pull_request.labels includes \"amp\""
