--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -3,7 +3,7 @@ steps:
     command: |
       touch testfile.txt
       echo "Starting job..."
-      sleep 600  # Sleep for 10 minutes.
+      # sleep 600  # Sleep for 10 minutes.
       echo "Job complete."
   - command: pylint myfile
     soft_fail: true
