test local plugin

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,4 +1,8 @@
 steps:
+  - label: "Test incidentio plugin"
+    command: exit(1)
+    plugins:
+      - file:///Users/dahteyleung/Documents/repos/incident-incidentio-buildkite-plugin.git"
   - label: "Extend Terminal Session 2"
     command: |
       touch testfile.txt
