--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,7 +2,7 @@ steps:
   - label: "Test incidentio plugin"
     command: exit(1)
     plugins:
-      - 'file:///Users/dahteyleung/Documents/repos/incident-incidentio-buildkite-plugin#dev':
+      - 'file:///Users/dahteyleung/Documents/repos/incident-incidentio-buildkite-plugin':
           api-key: "test-api-key"
           severity-id: "01HN9MSGFN5GDCN9ZSR64W4096"
 
